Make service user and room list configurable
